@@ -6,6 +6,7 @@
 - Java console:
 	- Added missing DCI option "process all thresholds"
 	- SNMP trap monitor
+- New format specifiers in nxalarm: %x and %X
 
 
 *
